--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ body, html {
     background: var(--background);
     color: var(--text);
     font-family: var(--font);
+    height: 1000px:
 }
 
 img {
